# CppSOLID

./: .gitmodules
project/app/: CMakeLists.txt
project/app/common/: CMakeLists.txt
project/app/common/include/types/: ReportFormat.hpp  Storage.hpp
project/app/common/src/types/: ReportFormat.cpp  Storage.cpp
project/app/configs/include/configs/: StartupConfig.hpp
project/app/configs/src/: StartupConfig.cpp
project/app/configs/ut/: StartupConfig_tests.cpp
project/app/interfaces/include/interfaces/parsers/: IParsersFactory.hpp
project/app/interfaces/include/interfaces/storage/: IStorage.hpp  IStorageFactory.hpp
project/app/main/: CMakeLists.txt  Main.cpp
project/app/mocks/include/mocks/: StorageMock.hpp
project/app/parsers/: CMakeLists.txt
project/app/parsers/include/parsers/: YamlParser.hpp
project/app/parsers/src/: ParsersFactory.cpp  ValidatedReportParser.cpp  YamlParser.cpp
project/app/parsers/ut/: CMakeLists.txt  YamlParser_tests.cpp
project/app/services/include/services/: TaxService.hpp  TaxServiceFactory.hpp
project/app/services/src/: TaxService.cpp  TaxServiceFactory.cpp
project/app/services/ut/: TaxService_tests.cpp
project/app/storage/: CMakeLists.txt
project/app/storage/include/storage/: JsonStorage.hpp  StorageFactory.hpp  ValidatedStorage.hpp  XmlStorage.hpp  YamlStorage.hpp
project/app/storage/src/: JsonStorage.cpp  StorageFactory.cpp  ValidatedStorage.cpp  XmlStorage.cpp  YamlStorage.cpp
project/app/storage/ut/: CMakeLists.txt  JsonStorage_tests.cpp  XmlStorage_tests.cpp  YamlStorage_tests.cpp
